[package]
name = "alice-logistics-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "ALICE Logistics SaaS — supply chain optimization core engine"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
